spec/.test/config/valid/only/metadata.php
<?php

return [
    'metadata' => [
        'id1' => ['k311' => 'm311', 'k312' => 'm312'],
        'id2' => ['k321' => 'm311', 'k322' => 'm322'],
    ],
];
