spec/.test/config/invalid/entry/tags.php
<?php

return [
    'parameters' => [],
    'aliases' => [],
    'factories' => [],
    'extensions' => [],
    'tags' => [
        'id1' => [],
        'id2' => 1,
        'id3' => [],
    ],
    'metadata' => [],
    'passes' => [],
    'mappers' => [],
];
